--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"next": "15.0.0",
 		"react": "19.0.0-rc-65a56d0e-20241020",
 		"react-dom": "19.0.0-rc-65a56d0e-20241020",
+		"react-twc": "^1.4.2",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
