--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@formatjs/intl-localematcher": "^0.5.5",
+		"@notionhq/client": "^2.2.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.1.0",
@@ -18,6 +19,7 @@
 		"lucide-react": "^0.453.0",
 		"negotiator": "^1.0.0",
 		"next": "15.0.0",
+		"notion-client": "^6.16.0",
 		"react": "19.0.0-rc-65a56d0e-20241020",
 		"react-dom": "19.0.0-rc-65a56d0e-20241020",
 		"react-twc": "^1.4.2",
