--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo -p 3700",
+		"dev": "next dev --turbopack -p 3700",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@formatjs/intl-localematcher": "^0.5.5",
+		"@formatjs/intl-localematcher": "^0.5.6",
 		"@notionhq/client": "^2.2.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"lucide-react": "^0.453.0",
 		"negotiator": "^1.0.0",
-		"next": "15.0.0",
+		"next": "^15.0.1",
 		"notion-client": "^6.16.0",
-		"react": "19.0.0-rc-65a56d0e-20241020",
-		"react-dom": "19.0.0-rc-65a56d0e-20241020",
+		"react": "^19.0.0-rc-fb9a90fa48-20240614",
+		"react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
 		"react-twc": "^1.4.2",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
@@ -30,11 +31,11 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/negotiator": "^0.6.3",
-		"@types/node": "^20.17.0",
+		"@types/node": "^20.17.1",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"eslint": "^8.57.1",
-		"eslint-config-next": "15.0.0",
+		"eslint-config-next": "^15.0.1",
 		"postcss": "^8.4.47",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3"
