feat: add media page

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NOTION_API_KEY=
-NOTION_DATABASE_TRANSLATIONS_ID=
 NOTION_DATABASE_BLOG_ID=
+NOTION_DATABASE_MEDIA_ID=
+BASE_URL=https://solomanibc.com
