--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
 	},
 	"dependencies": {
 		"@formatjs/intl-localematcher": "^0.5.6",
+		"@next/third-parties": "^15.0.3",
 		"@notionhq/client": "^2.2.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@t3-oss/env-nextjs": "^0.11.1",
+		"@vercel/analytics": "^1.3.2",
+		"@vercel/speed-insights": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.453.0",
 		"negotiator": "^1.0.0",
-		"next": "^15.0.2",
+		"next": "^15.0.3",
 		"notion-client": "^6.16.0",
 		"react": "^19.0.0-rc-fb9a90fa48-20240614",
 		"react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
