--- a/package.json
+++ b/package.json
@@ -9,39 +9,39 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@formatjs/intl-localematcher": "^0.5.6",
-		"@next/third-parties": "^15.0.3",
+		"@formatjs/intl-localematcher": "^0.5.8",
+		"@next/third-parties": "^15.0.4",
 		"@notionhq/client": "^2.2.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
-		"@radix-ui/react-icons": "^1.3.1",
+		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@t3-oss/env-nextjs": "^0.11.1",
-		"@vercel/analytics": "^1.3.2",
+		"@vercel/analytics": "^1.4.1",
 		"@vercel/speed-insights": "^1.1.0",
-		"class-variance-authority": "^0.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.453.0",
 		"negotiator": "^1.0.0",
-		"next": "^15.0.3",
+		"next": "^15.0.4",
 		"notion-client": "^6.16.0",
-		"react": "^19.0.0-rc-fb9a90fa48-20240614",
-		"react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"react-twc": "^1.4.2",
-		"tailwind-merge": "^2.5.4",
+		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/negotiator": "^0.6.3",
-		"@types/node": "^20.17.5",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@types/node": "^20.17.9",
+		"@types/react": "^18.3.14",
+		"@types/react-dom": "^18.3.2",
 		"eslint": "^8.57.1",
-		"eslint-config-next": "^15.0.2",
-		"postcss": "^8.4.47",
-		"tailwindcss": "^3.4.14",
-		"typescript": "^5.6.3"
+		"eslint-config-next": "^15.0.4",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.16",
+		"typescript": "^5.7.2"
 	}
 }
