--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@formatjs/intl-localematcher": "^0.5.8",
-		"@next/third-parties": "^15.0.4",
+		"@formatjs/intl-localematcher": "^0.5.9",
+		"@ducanh2912/next-pwa": "^10.2.9",
+		"@next/third-parties": "^15.1.2",
 		"@notionhq/client": "^2.2.15",
-		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-icons": "^1.3.2",
-		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@vercel/analytics": "^1.4.1",
 		"@vercel/speed-insights": "^1.1.0",
@@ -23,25 +24,25 @@
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.453.0",
 		"negotiator": "^1.0.0",
-		"next": "^15.0.4",
+		"next": "^15.1.2",
 		"notion-client": "^6.16.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-twc": "^1.4.2",
-		"tailwind-merge": "^2.5.5",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.23.8"
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/negotiator": "^0.6.3",
-		"@types/node": "^20.17.9",
-		"@types/react": "^18.3.14",
-		"@types/react-dom": "^18.3.2",
+		"@types/node": "^20.17.10",
+		"@types/react": "^19.0.2",
+		"@types/react-dom": "^19.0.2",
 		"eslint": "^8.57.1",
-		"eslint-config-next": "^15.0.4",
+		"eslint-config-next": "^15.1.2",
 		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.16",
+		"tailwindcss": "^3.4.17",
 		"typescript": "^5.7.2"
 	}
 }
