--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@formatjs/intl-localematcher": "^0.5.9",
 		"@ducanh2912/next-pwa": "^10.2.9",
+		"@formatjs/intl-localematcher": "^0.5.9",
 		"@next/third-parties": "^15.1.2",
 		"@notionhq/client": "^2.2.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -22,18 +22,21 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
+		"leaflet": "^1.9.4",
 		"lucide-react": "^0.453.0",
 		"negotiator": "^1.0.0",
 		"next": "^15.1.2",
 		"notion-client": "^6.16.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-leaflet": "^5.0.0",
 		"react-twc": "^1.4.2",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
+		"@types/leaflet": "^1.9.15",
 		"@biomejs/biome": "1.9.4",
 		"@types/negotiator": "^0.6.3",
 		"@types/node": "^20.17.10",
