--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
 	},
 	"dependencies": {
 		"@ducanh2912/next-pwa": "^10.2.9",
-		"@formatjs/intl-localematcher": "^0.5.10",
+		"@formatjs/intl-localematcher": "^0.6.0",
 		"@next/third-parties": "^15.1.7",
 		"@notionhq/client": "^2.2.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/react-slot": "^1.1.2",
-		"@t3-oss/env-nextjs": "^0.11.1",
+		"@t3-oss/env-nextjs": "^0.12.0",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"leaflet": "^1.9.4",
-		"lucide-react": "^0.453.0",
+		"lucide-react": "^0.475.0",
 		"negotiator": "^1.0.0",
 		"next": "^15.1.7",
-		"notion-client": "^6.16.0",
+		"notion-client": "^7.1.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-leaflet": "^5.0.0",
@@ -36,13 +36,14 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@types/leaflet": "^1.9.16",
 		"@biomejs/biome": "1.9.4",
+		"@types/leaflet": "^1.9.16",
 		"@types/negotiator": "^0.6.3",
-		"@types/node": "^20.17.19",
+		"@types/node": "^22.13.4",
 		"@types/react": "^19.0.9",
 		"@types/react-dom": "^19.0.3",
-		"eslint": "^8.57.1",
+		"@typescript-eslint/eslint-plugin": "~8.24.0",
+		"eslint": "^9.20.1",
 		"eslint-config-next": "^15.1.7",
 		"postcss": "^8.5.2",
 		"tailwindcss": "^3.4.17",
