--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react-dom": "^19.1.0",
 		"react-leaflet": "^5.0.0",
 		"react-twc": "^1.4.2",
+		"server-only": "^0.0.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.25.67"
