--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@tailwindcss/postcss": "^4.1.11",
 		"@types/leaflet": "^1.9.20",
 		"@types/negotiator": "^0.6.4",
 		"@types/node": "^22.16.5",
@@ -52,7 +53,7 @@
 		"eslint-config-next": "^15.4.3",
 		"eslint-plugin-sort-destructure-keys": "^2.0.0",
 		"postcss": "^8.5.6",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.11",
 		"typescript": "^5.8.3"
 	}
 }
